--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
 #      update : entity 변경사항만 alter를 적용하고 기존데이터 유지
 #      validate : 실제 DB와의 차이점을 check만 하고 ddl문 실행 X, 콘솔로만 변경사항 출력
       ddl-auto: create
+#      콘솔창에 ddl, dml 등의 쿼리를 출력하여 보여주는 옵션
+    show-sql: true
 
 # mapper파일(mybatis의 쿼리파일)의 위치를 명시하고 scan. 기본적으로 resource폴더는 default
 mybatis:
