--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -28,7 +28,7 @@ spring:
 #      create : 매번(서버재시작) table을 drop 후 재생성
 #      update : entity 변경사항만 alter를 적용하고 기존데이터 유지
 #      validate : 실제 DB와의 차이점을 check만 하고 ddl문 실행 X, 콘솔로만 변경사항 출력
-      ddl-auto: create
+      ddl-auto: update
 #      콘솔창에 ddl, dml 등의 쿼리를 출력하여 보여주는 옵션
     show-sql: true
 
